9. pass test: period overlap budget lastday

--- a/BudgetByTdd/BudgetByTdd/BudgetByTdd.csproj
+++ b/BudgetByTdd/BudgetByTdd/BudgetByTdd.csproj
@@ -57,6 +57,7 @@
     <Compile Include="Accounting.cs" />
     <Compile Include="AccountingTests.cs" />
     <Compile Include="IBudgetRepository.cs" />
+    <Compile Include="Period.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
