--- a/BudgetByTdd/BudgetByTdd/BudgetByTdd.csproj
+++ b/BudgetByTdd/BudgetByTdd/BudgetByTdd.csproj
@@ -56,6 +56,7 @@
   <ItemGroup>
     <Compile Include="Accounting.cs" />
     <Compile Include="AccountingTests.cs" />
+    <Compile Include="Budget.cs" />
     <Compile Include="IBudgetRepository.cs" />
     <Compile Include="Period.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
