8. pass test: period overlap budget lastday

--- a/BudgetByTdd/BudgetByTdd/BudgetByTdd.csproj
+++ b/BudgetByTdd/BudgetByTdd/BudgetByTdd.csproj
@@ -58,6 +58,7 @@
     <Compile Include="AccountingTests.cs" />
     <Compile Include="Budget.cs" />
     <Compile Include="IBudgetRepository.cs" />
+    <Compile Include="Period.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
